<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Transporte</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="botao_cadastro">Novo Objeto</string>
    <string name="name">Nome</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_confirma_cadastro">ConfirmaCadastro</string>
    <string name="comp">Comprimento</string>
    <string name="larg">Largura</string>
    <string name="alt">Altura</string>
    <string name="peso">Peso</string>
    <string name="quant">Quantidade</string>
    <string name="title_activity_ver_item">VerItem</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_justifique">Justifique</string>

</resources>
